--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js'></script>
     <!--bootstrap-->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap-flatly-theme.min.css"/>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <!--apteczka-->
     <script src='js/main.js'></script>
-    <script src='js/controllers.js'></script>
-    <title>moja-apteczka.pl</title>
+    <script src='js/filters/badgesFilter.js'></script>
+    <script src='js/controllers/SignInCtrl.js'></script>
+    <script src='js/controllers/JumbotronCtrl.js'></script>
+    <script src='js/controllers/KitCtrl.js'></script>
+    <script src='js/models/UserModel.js'></script>
+    <title>Moja Apteczka</title>
 </head>
 <body>
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -26,24 +29,28 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">moja-apteczka.pl</a>
+            <a class="navbar-brand" href="#">Moja Apteczka</a>
         </div>
-        <div class="navbar-collapse collapse">
-            <form class="navbar-form navbar-right" role="form">
+        <div class="navbar-collapse collapse" ng-controller="SignInCtrl">
+            <form class="navbar-form navbar-right" role="form" ng-hide="isSignedIn()">
                 <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control">
+                    <input type="text" placeholder="Email" class="form-control" ng-model="email">
                 </div>
                 <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control">
+                    <input type="password" placeholder="Password" class="form-control" ng-model="password">
                 </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
+                <button type="submit" class="btn btn-success" ng-click="signIn()">Zaloguj</button>
             </form>
+            <div class="navbar-form navbar-right">
+                <a class="btn btn-warning" ng-show="isSignedIn()" ng-click="signOut()">
+                    <span class="glyphicon glyphicon-off"></span> Wyloguj</a>
+            </div>
         </div>
         <!--/.navbar-collapse -->
     </div>
 </div>
 
-<div class="jumbotron">
+<div class="jumbotron" ng-controller="JumbotronCtrl" ng-show="isVisible()">
     <div class="container">
         <h1>moja-apteczka.pl</h1>
 
