--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
     <!--angular-->
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-resource.js'></script>
     <!--bootstrap-->
     <link rel="stylesheet" href="css/bootstrap-flatly-theme.min.css"/>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <!--apteczka-->
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/bootstrap-override.css"/>
     <script src='js/main.js'></script>
+    <script src='js/services/services.js'></script>
     <script src='js/filters/badgesFilter.js'></script>
     <script src='js/controllers/SignInCtrl.js'></script>
     <script src='js/controllers/JumbotronCtrl.js'></script>
     <script src='js/controllers/KitCtrl.js'></script>
+    <script src='js/controllers/ItemCtrl.js'></script>
     <script src='js/models/UserModel.js'></script>
     <title>Moja Apteczka</title>
 </head>
 <body>
 
-<div class="navbar navbar-default navbar-static-top" role="navigation">
+<div class="navbar navbar-default navbar-static-top" role="navigation" ng-controller="SignInCtrl">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -31,7 +36,11 @@
             </button>
             <a class="navbar-brand" href="#">Moja Apteczka</a>
         </div>
-        <div class="navbar-collapse collapse" ng-controller="SignInCtrl">
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav" ng-show="isSignedIn()">
+                <li ng-class="{active: isOnKit()}"><a href="/#/kit">Apteczka</a></li>
+                <!--<li ng-class="{active: isOnMedicamentIndex()}"><a href="/#/medicamentIndex">Spis leków</a></li>-->
+            </ul>
             <form class="navbar-form navbar-right" role="form" ng-hide="isSignedIn()">
                 <div class="form-group">
                     <input type="text" placeholder="Email" class="form-control" ng-model="email">
