app version updated

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src='js/controllers/JumbotronCtrl.js'></script>
     <script src='js/controllers/KitCtrl.js'></script>
     <script src='js/controllers/ItemCtrl.js'></script>
+    <script src='js/controllers/AddItemCtrl.js'></script>
+    <script src='js/controllers/EditItemCtrl.js'></script>
     <script src='js/models/UserModel.js'></script>
     <title>Moja Apteczka</title>
 </head>
@@ -63,7 +65,7 @@
     <div class="container">
         <h1>moja-apteczka.pl</h1>
 
-        <p>Na tym zarobimy grube miliony! Cześć Madzia!!!</p>
+        <p>Na tym zarobimy grube miliony! Jarosław, Jarosław!</p>
     </div>
 </div>
 
